# strategy-builder

./: .gitignore  config.py  conftest.py  db_models.py  main.py  pyproject.toml
backend/: .gitignore  pyproject.toml
backend/src/: __main__.py  config.py  db_models.py  main.py  workers.py
backend/src/alembic/: env.py
backend/src/core/: enums.py  events.py  typing.py
backend/src/examples/: backtest_example.py  deployment_example.py
backend/src/infra/: __init__.py  deployment_consumer.py  position_relay.py
backend/src/lib/: __init__.py  backtest.py  enums.py  order_manager_registry.py  strategy.py  typing.py
backend/src/server/: app.py  (+3 more)
core/: enums.py  utils.py
frontend/: .env  index.html  orval.config.ts  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css  main.tsx  openapi.ts
lib/: __init__.py  enums.py  order_manager_registry.py  strategy.py  typing.py
lib/indicators/: __init__.py
lib/indicators.py/: __init__.py  bos.py  fvg.py  orderblock.py
lib/markets/: __init__.py  mt5_market.py
lib/order_managers/: __init__.py  demo_futures_order_manager.py  demo_spot_order_manager.py  futures_order_manager.py  spot_order_manager.py
server/: app.py  dependencies.py
src/: config.py  db_models.py  utils.py
src/core/: enums.py
src/examples/: backtest_example.py  simple.py
src/lib/: __init__.py  backtest.py  enums.py  order_manager_registry.py  strategy.py  typing.py  utils.py
src/resources/: example-prompt.txt
tests/: test_backtest_exchange.py  test_lib.py
tests/test_lib/: test_backtest.py  test_strategy.py
(+127 files in other folders)
