[project]
name = "strat-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.116.1",
    "matplotlib>=3.10.6",
    "metatrader5>=5.0.5200",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.43",
]
